# skiplevel-ai

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE  Procfile  RAILWAY_DEPLOYMENT.md  README.md  REFACTORING_IMPROVEMENTS.md  api_server.py  app.py  chainlit.md  config.yaml  database_setup.sql  deploy.sh  multi-agent-pattern.md  pyproject.toml  railway.json  requirements.txt  test_agent.py  test_conversation_manager.py  test_profile_integration.py  test_supabase_lookup.py  test_websocket_client.py  vercel.json  work-log.md
.chainlit/: config.toml
agentic-pipeline-reference/: README.md  pyproject.toml  run_pipeline.py
agentic-pipeline-reference/data_collection_pipeline/: __init__.py  pipeline.py
api/: chat.py
content-curation-pipeline/: .gitignore  README.md  check_env.py  clean.py  clean_storage.py  config.yaml.bak  dual_eval_results.json  pipeline_dual_eval_results.json  pyproject.toml  run.py  run_medium_discovery.py  sample_urls.json  save_pdfs.py  tasks.md  test_dual_eval.py  test_dual_pipeline.py  test_medium_api.py  workflow.md
content-curation-pipeline/data/: all_results.json  all_results_20250503_120323.json  cleaned_content.json  curated_links.json  evaluated.json  full_content_20250503_120323.json  full_content_20250503_120456.json  high_quality_content.json  high_quality_content_20250503_120323.json  query_metrics_20250503_120323.json  query_metrics_20250503_120456.json
content-curation-pipeline/data/cache/: discovered_resources.json  pdf_cache.json  processed_resources.json  processed_urls.json
content-curation-pipeline/data/cache/medium/: medium_cache.json
content-curation-pipeline/data/cache/papers/: papers_cache.json
content-curation-pipeline/data/cache/reddit/: reddit_cache.json
content-curation-pipeline/data/cache/substack/: substack_cache.json
content-curation-pipeline/data/cache/youtube/: youtube_cache.json
content-curation-pipeline/data/content/medium/: medium_0c209a130147.txt  medium_0dd6a2aaadfc.txt  medium_1707fcd022f3.txt  medium_17ce3d45c1ed.txt  medium_28fa9e49d868.txt  medium_33351b7a809e.txt  medium_3a3f5c40863c.txt  medium_4980b876c516.txt  medium_5129664423cb.txt  medium_51743991816e.txt  medium_5cd5cbf2a87c.txt  medium_5fdf30612950.txt  medium_655477dabf3a.txt  medium_6fc8301eb07c.txt  medium_7239525c32e5.txt  medium_8f376ee6a406.txt  medium_98c90ed34170.txt  medium_d2bc4a0ac3d7.txt  medium_dc007155ff3d.txt  medium_dcfc9a70a6f8.txt  medium_e3a77153ff1a.txt  medium_e7c746b48c27.txt  medium_e92d4f3186df.txt  medium_eb4a092deded.txt
content-curation-pipeline/data/content/reddit/: reddit_10pqui2.txt  reddit_15l8a96.txt  reddit_18f7q1o.txt  reddit_19ca5nn.txt  reddit_1b9sccl.txt  reddit_1biotus.txt  reddit_1buw4yg.txt  reddit_1cx6w4f.txt  reddit_1cxgyk3.txt  reddit_1dowmzg.txt  reddit_1fkk27g.txt  reddit_1fwjk5c.txt  reddit_1i2cnu2.txt  reddit_1i7r1ud.txt  reddit_1iovcvi.txt  reddit_1it046j.txt  reddit_1j2sfs3.txt  reddit_1j40lsj.txt  reddit_1jg1hpi.txt  reddit_1jipn40.txt  reddit_1jxacoq.txt  reddit_1k1udrn.txt  reddit_1k5x03b.txt  reddit_1k9ixy0.txt  reddit_nmodyl.txt  reddit_o3jpfc.txt  reddit_xkenut.txt  reddit_xpnxy2.txt  reddit_yqmrci.txt  reddit_zeg22l.txt
content-curation-pipeline/data/content/substack/: substack_pragmaticengineer_161916016.txt  substack_pragmaticengineer_162379789.txt  substack_pragmaticengineer_162403212.txt  substack_pragmaticengineer_162615768.txt  substack_pragmaticengineer_162982769.txt  substack_theengineeringmanager_153761189.txt  substack_theengineeringmanager_156161735.txt  (+3 more)
content-curation-pipeline/data/exports/: content_table_20250506_195026.md  content_table_20250506_201043.md  content_table_20250506_202720.md  content_table_20250506_202800.md  content_table_20250506_202845.md  content_table_20250506_203020.md  content_table_20250506_203044.md  content_table_20250506_203210.md
content-curation-pipeline/data/test/: medium_api_test_engineering.json  medium_api_test_engineering_sample.txt  medium_api_user_zulie.json
content-curation-pipeline/non_agentic_pipeline/: __init__.py  pipeline.py
content-curation-pipeline/non_agentic_pipeline/modules/: content_analysis.py  content_extraction.py
content-curation-pipeline/scripts/: clean_cache.py  create_config.py
content-curation-pipeline/src/pipeline/: __init__.py  interfaces.py  pipeline.py
data_collection_agent/: .gitignore  README.md  pyproject.toml  run_test.py  test_pipeline.py
data_collection_agent/data_collection_agent/: __init__.py  constants.py  graph.py  pipeline.py
data_collection_agent/data_collection_agent/reference/: graph.py
data_collection_agent/data_collection_agent/tools/: content_fetcher.py  qdrant_writer.py  rubric_chunker.py  source_selector.py
data_collection_agent/docs/: README.md  lcel_implementation.md
data_collection_agent/docs/api/: README.md
data_collection_agent/docs/architecture/: README.md
data_collection_agent/docs/implementation/: README.md
data_collection_agent/docs/references/: README.md  python_patterns.md  state_management.md  tool_patterns.md
data_collection_agent/docs/usage/: README.md
data_collection_agent/src/data_collection_agent/: __init__.py  constants.py  toolbelt.py
data_collection_agent/tests/: test_orchestration.py
skiplevel/: README.md  chainlit_app.py  cli_app.py  pyproject.toml
skiplevel-agent/: ARCHITECTURE.md  README.md  chainlit_app.py  load_data.py  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  test.py
skiplevel-agent/graph/: agent.py
skiplevel-agent/tools/: growth_advisor.py  reflection_evaluator.py  rubric_retriever.py
skiplevel/agents/growth_advisor/: agent.py
skiplevel/agents/reflection_evaluator/: agent.py
skiplevel/core/: agent_helpers.py
skiplevel/data/rubrics/: dropbox.jsonl  gitlab.jsonl
skiplevel/graphs/: main_graph.py
skiplevel/models/: types.py
skiplevel/scripts/: inspect_rubrics.py  seed_rubrics.py
skiplevel/supervisor/: supervisor_agent.py
skiplevel/teams/: reflection_team.py
skiplevel/tests/: test_end_to_end.py  test_growth_agent.py  test_reflection_agent.py
skiplevel/vectorstore/: qdrant_client.py
(+129 files in other folders)
