[project]
name = "data-collection-agent"
version = "0.1.0"
description = "Agentic data collection and ingestion for the Skiplevel project"
authors = [
    {name = "atolat", email = "your-email@example.com"}
]
dependencies = [
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "langchain-openai==0.3.2",
    "langgraph==0.2.67",
    "qdrant-client==1.13.3",
    "openai==1.75.0",
    "python-dotenv==1.1.0",
    "pydantic==2.10.0",
    "langsmith==0.3.32",
    "beautifulsoup4==4.12.3",
    "requests==2.31.0"
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.hatch.build.targets.wheel]
packages = ["data_collection_agent"] 